@@ -103,10 +103,10 @@ First see the documentation, especially this list of
 <a href="faq.html">frequently asked questions</a>, and the man pages
 if you have a question about a specific runit program.
 If that still doesn't answer your question, try to search the
-<a href="http://news.gmane.org/gmane.comp.sysutils.supervision.general">
+<a href="https://skarnet.org/lists/supervision/">
 supervision mailing list archive</a>.
 Finally, if this fails, feel free to post your question to the
-<a href="http://skarnet.org/lists/">supervision mailing list</a>.
+<a href="https://skarnet.org/lists/#supervision">supervision mailing list</a>.
 
 <!--
 <hr>
