@@ -48,7 +48,7 @@ Contribute to <i>runit</i> through
 <a href="https://github.com/g-pape/runit/">GitHub runit</a>.
 <hr>
 <i>runit</i> is discussed on the
-<a href="http://skarnet.org/lists/#supervision">
+<a href="https://skarnet.org/lists/#supervision">
 &lt;supervision@list.skarnet.org&gt;</a>
 mailing list.
 Please contact this list and not me privately.
@@ -58,9 +58,9 @@ To subscribe send an empty email to
 &lt;supervision-subscribe@list.skarnet.org&gt;</a>.
 <p>
 Mailing list archives are available at
-<a href="http://skarnet.org/lists/archive.cgi?2">skarnet.org</a>, and
-<a href="http://news.gmane.org/gmane.comp.sysutils.supervision.general">
-gmane.org</a>.
+<a href="https://skarnet.org/lists/supervision/">skarnet.org</a>, and
+<a href="https://www.mail-archive.com/supervision@list.skarnet.org/">
+mail-archive.com</a>.
 <hr>
 The program <a href="runit.8.html">runit</a> is intended to run as Unix
 process no 1, it is automatically started by the
