@@ -1,3 +1,5 @@
+  * doc/index.html, faq.html: update links to supervision mailing list and
+    list archives.
   * doc/benefits.html: remove references to Debian packages.
   * doc/*, man/*, package/README: switch all smarden.org http links to https.
   * utmpset.c: check length of line argument to match struct utmp; properly
